- Updated AbstractBoard with holdBrick() logic, including single-swap-per-turn validation
- Extended ViewData record to carry held brick state to the view layer

- Updated GameRenderer to render the held piece using a secondary NextPieceRenderer instance

- Added "HOLD" panel to gameLayout.fxml

- Mapped 'H' key in GameInputHandler to trigger the hold action

- Fixed a switch case bug in GameInputHandler preventing proper input handling